js262/test/language/statements/const/syntax/without-initializer-do-statement-while-expression.js


/*---
es6id: 13.1
description: >
    const declarations without initialisers in statement positions:
    do Statement while ( Expression )
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
do const x; while (false)
